--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@ Extensive experiments show that DAL can produce highly competitive makeup models
 <!-- End teaser image -->
 
 
-<!-- Experimental image-->
-<section class="section hero is-white">
+<!-- Method Overview-->
+<section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -205,7 +205,7 @@ Extensive experiments show that DAL can produce highly competitive makeup models
 </section>
 
 <!-- Method-->
-<section class="section hero is-white">
+<section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -228,21 +228,36 @@ Extensive experiments show that DAL can produce highly competitive makeup models
 </section>
 
 <!-- Additional Results-->
-
-<section class="section hero is-light">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Experimental Results of DDA</h2>
+<!-- Vid2vid carousel -->
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container  is-max-desktop">
+      <h2 class="title is-3">More Video Results</h2>
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item item-video1">
+          <video poster="" id="vid2vid_video1" playsinline autoplay muted loop height="90%" src="static/videos/video2_tiny.mp4">
+          </video>
+        </div>
+        <div class="item item-video2">
+          <video poster="" id="vid2vid_video2" playsinline autoplay muted loop height="90%" src="static/videos/makeup1.mov">
+          </video>
+        </div>
+        <div class="item item-video3">
+          <video poster="" id="vid2vid_video3" playsinline autoplay muted loop height="90%" src="static/videos/makeup2.mov">
+          </video>
+        </div>
       </div>
     </div>
   </div>
 </section>
+<!-- End vid2vid carousel -->
+
 
 <!-- Image carousel -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
+      <h2 class="title is-3">Experimental Results of DDA</h2>
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
@@ -268,19 +283,11 @@ Extensive experiments show that DAL can produce highly competitive makeup models
 </section>
 <!-- End image carousel -->
 
-<section class="section hero is-light">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Experimental Results of TinyBeauty</h2>
-      </div>
-    </div>
-  </div>
-</section>
 
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
+      <h2 class="title is-3">Experimental Results of TinyBeauty</h2>
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
