--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Extensive experiments show that DAL can produce highly competitive makeup models
 <!-- Image carousel -->
 <section class="hero is-small">
   <div class="hero-body">
-    <div class="container">
+    <div class="container  is-max-desktop">
       <h2 class="title is-3">Experimental Results of DDA</h2>
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
@@ -239,7 +239,7 @@ Extensive experiments show that DAL can produce highly competitive makeup models
 
 <section class="hero is-small">
   <div class="hero-body">
-    <div class="container">
+    <div class="container  is-max-desktop">
       <h2 class="title is-3">Experimental Results of TinyBeauty</h2>
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
@@ -282,22 +282,22 @@ Extensive experiments show that DAL can produce highly competitive makeup models
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Diffusion-based Data Amplifier</h2>
-        <div class="content has-text-justified">
-          <p>
-            To generate high-quality paired makeup data, our Diffusion-based Data Amplifier(DDA) is required to contain the subject's original facial features, skin texture details, such as wrinkles and spots, and consistent, precise makeup styles across various portraits.
-            To overcome these obstacles, we introduce a Residual Diffusion Model that preserves texture and detail, reducing distortion and mask-like effects. Moreover, we propose a Fine-Grained Makeup Module to ensure the precise application of makeup to the appropriate facial areas and generate visually consistent makeup styles, as the following shows.
-          </p>
-        </div>
-        <div class="hero-body">
-          <img src="static/images/main_02.png" alt="" style="width: 100%; height: auto;">
-          <h2 class="subtitle has-text-centered">
-            Overview of the Diffusion-based Data Amplifier (DDA).
-          </h2>
-        </div>
-        
+        <h2 class="title is-3">Method</h2>
       </div>
     </div>
+    <h3 class="title is-3">Diffusion-based Data Amplifier</h3>
+      <div class="content has-text-justified">
+        <p>
+          To generate high-quality paired makeup data, our Diffusion-based Data Amplifier(DDA) is required to contain the subject's original facial features, skin texture details, such as wrinkles and spots, and consistent, precise makeup styles across various portraits.
+          To overcome these obstacles, we introduce a Residual Diffusion Model that preserves texture and detail, reducing distortion and mask-like effects. Moreover, we propose a Fine-Grained Makeup Module to ensure the precise application of makeup to the appropriate facial areas and generate visually consistent makeup styles, as the following shows.
+        </p>
+      </div>
+      <div class="hero-body">
+        <img src="static/images/main_02.png" alt="" style="width: 100%; height: auto;">
+        <h2 class="subtitle has-text-centered">
+          Overview of the Diffusion-based Data Amplifier (DDA).
+        </h2>
+      </div>
   </div>
 </section>
 
