--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <!-- <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
                   <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
                   </span>
-                  </div> -->
-
-                  <div class="is-size-5 publication-authors">
-                    <span class="author-block">Anonymous Author</span>
                   </div>
+
+<!--                   <div class="is-size-5 publication-authors">
+                    <span class="author-block">Anonymous Author</span>
+                  </div> -->
 
                   <!-- <div class="column has-text-centered">
                     <div class="publication-links">
