--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <span class="author-block">
                 <a href="https://github.com/TinyBeauty" target="_blank">Qiaoqiao Jin</a>,</span>
                 <span class="author-block">
-                  <a href="https://github.com/neuralchen" target="_blank">Xuanhong Chen</a><sup>*</sup>,</span>
+                  <a href="https://github.com/neuralchen" target="_blank">Xuanhong Chen</a>,</span>
                   <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
                   </span>
