--- a/index.html
+++ b/index.html
@@ -60,7 +60,19 @@
                 <span class="author-block">
                   <a href="https://github.com/neuralchen" target="_blank">Xuanhong Chen</a>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
+                    <a href="https://scholar.google.com/citations?user=oi1LErsAAAAJ&hl=en" target="_blank">Meiguang Jin</a>,
+                  </span>
+              <span class="author-block">
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Ying Chen</a>,
+                  </span>
+              <span class="author-block">
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Yucheng Zheng</a>,
+                  </span>
+              <span class="author-block">
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Yupeng Zhu</a>,
+                  </span>
+              <span class="author-block">
+                    <a href="https://scholar.google.com.sg/citations?user=eUbmKwYAAAAJ&hl=en" target="_blank">Bingbing Ni</a><sup>*</sup>,
                   </span>
                   </div>
 
