--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                     <a href="https://scholar.google.com/citations?user=oi1LErsAAAAJ&hl=en" target="_blank">Meiguang Jin</a>,
                   </span>
               <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Ying Chen</a>,
+                    <a href="" target="_blank">Ying Chen</a>,
                   </span>
               <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Yucheng Zheng</a>,
+                    <a href="" target="_blank">Yucheng Zheng</a>,
                   </span>
               <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Yupeng Zhu</a>,
+                    <a href="" target="_blank">Yupeng Zhu</a>,
                   </span>
               <span class="author-block">
                     <a href="https://scholar.google.com.sg/citations?user=eUbmKwYAAAAJ&hl=en" target="_blank">Bingbing Ni</a><sup>*</sup>,
@@ -80,18 +80,18 @@
                     <span class="author-block">Anonymous Author</span>
                   </div> -->
 
-                  <!-- <div class="column has-text-centered">
+                  <div class="column has-text-centered">
                     <div class="publication-links">
                          <-- Arxiv PDF link -->
-                      <!-- <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                      <span class="link-block">
+                        <a href="https://arxiv.org/pdf/2403.15033.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
                         <span>Paper</span>
                       </a>
-                    </span>  -->
+                    </span> 
 
                     <!-- Supplementary PDF link -->
                     <!-- <span class="link-block">
@@ -105,24 +105,24 @@
                   </span> -->
 
                   <!-- Github link -->
-                  <!-- <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                  <span class="link-block">
+                    <a href="https://github.com/TinyBeauty" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
                     <span>Code</span>
                   </a>
-                </span> -->
+                </span>
 
                 <!-- ArXiv abstract Link -->
-                <!-- <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                <span class="link-block">
+                  <a href="https://arxiv.org/abs/2403.15033" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv</span> -->
+                  <span>arXiv</span>
                 <!-- </a> -->
               </span>
             </div>
