--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <a href="" target="_blank">Yupeng Zhu</a>,
                   </span>
               <span class="author-block">
-                    <a href="https://scholar.google.com.sg/citations?user=eUbmKwYAAAAJ&hl=en" target="_blank">Bingbing Ni</a><sup>*</sup>,
+                    <a href="https://scholar.google.com.sg/citations?user=eUbmKwYAAAAJ&hl=en" target="_blank">Bingbing Ni</a><sup>*</sup>
                   </span>
                   </div>
 
