--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
-                         <-- Arxiv PDF link -->
+<!--                          <-- Arxiv PDF link --> -->
                       <span class="link-block">
                         <a href="https://arxiv.org/pdf/2403.15033.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
