--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                     <a href="https://scholar.google.com/citations?user=oi1LErsAAAAJ&hl=en" target="_blank">Meiguang Jin</a>,
                   </span>
               <span class="author-block">
-                    <a href="" target="_blank">Ying Chen</a>,
+                    Ying Chen,
                   </span>
               <span class="author-block">
-                    <a href="" target="_blank">Yucheng Zheng</a>,
+                    Yucheng Zheng,
                   </span>
               <span class="author-block">
-                    <a href="" target="_blank">Yupeng Zhu</a>,
+                    Yupeng Zhu,
                   </span>
               <span class="author-block">
                     <a href="https://scholar.google.com.sg/citations?user=eUbmKwYAAAAJ&hl=en" target="_blank">Bingbing Ni</a><sup>*</sup>
