--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                     Ying Chen,
                   </span>
               <span class="author-block">
+                   Rui Shi,
+                  </span>
+              <span class="author-block">
                     Yucheng Zheng,
                   </span>
               <span class="author-block">
