--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/TinyBeauty" target="_blank"
+                    <a href="https://github.com/TinyBeauty/TinyBeauty" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
